courseware/labs/lab-16-networkpolicy-isolation/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kcna-lab16
  labels:
    kcna.tertiaryinfotech.com/lab: "lab-16"
    kcna.tertiaryinfotech.com/day: "3"
    app.kubernetes.io/part-of: meridian-freight
